fix content hidden by sticky footer

--- a/src/style/util.sass
+++ b/src/style/util.sass
@@ -30,6 +30,9 @@
 .pt-0
   padding-top: 0
 
+.pb-2
+  padding-bottom: 2.5rem
+
 .round
   border-radius: 100%
 
